--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -40,6 +40,11 @@
     .user-body
       margin 15px 0 0 0
       line-height 26px
+      .profile-item
+        border-bottom 1px solid #cecece
+        padding-bottom 10px
+        &.last
+          border-bottom 0
       h3
         font-size 20px
       span
