--- a/vonline_be/war/partials/settings.html
+++ b/vonline_be/war/partials/settings.html
@@ -6,22 +6,22 @@
                 <div class="tabbable">
                     <ul class="nav nav-tabs padding-12 tab-color-blue background-blue" id="myTab4">
 
-                        <li class="active"><a data-toggle="tab" href="#settings-base">Основное</a>
+                        <li class="active"><a data-toggle="tab" href="#settings-base" ng-click="$event.preventDefault()">Основное</a>
                         </li>
 
-                        <li><a data-toggle="tab" href="#private">Приватность</a>
+                        <li><a data-toggle="tab" href="#private" ng-click="$event.preventDefault()">Приватность</a>
                         </li>
 
-                        <li class=""><a data-toggle="tab" href="#alerts">Оповещения</a>
+                        <li class=""><a data-toggle="tab" href="#alerts" ng-click="$event.preventDefault()">Оповещения</a>
                         </li>
 
-                        <li class=""><a data-toggle="tab" href="#contacts">Контакты</a>
+                        <li class=""><a data-toggle="tab" href="#contacts" ng-click="$event.preventDefault()">Контакты</a>
                         </li>
 
-                        <li class=""><a data-toggle="tab" href="#family">Семья</a>
+                        <li class=""><a data-toggle="tab" href="#family" ng-click="$event.preventDefault()">Семья</a>
                         </li>
 
-                        <li class=""><a data-toggle="tab" href="#interests">Интересы</a>
+                        <li class=""><a data-toggle="tab" href="#interests" ng-click="$event.preventDefault()">Интересы</a>
                         </li>
                     </ul>
 
