--- a/vonline_be/war/css/profile.css
+++ b/vonline_be/war/css/profile.css
@@ -52,6 +52,13 @@
   margin: 15px 0 0 0;
   line-height: 26px;
 }
+.user-descr .text-area .user-body .profile-item {
+  border-bottom: 1px solid #cecece;
+  padding-bottom: 10px;
+}
+.user-descr .text-area .user-body .profile-item.last {
+  border-bottom: 0;
+}
 .user-descr .text-area .user-body h3 {
   font-size: 20px;
 }
