--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -908,3 +908,9 @@ transform()
 
 .ui-dialog-content
   text-align center
+
+#image-for-crop
+  min-width 300px
+  min-height 300px
+  width auto !important
+  height auto !important
