--- a/vonline_be/war/partials/profile.html
+++ b/vonline_be/war/partials/profile.html
@@ -13,6 +13,7 @@
                             <a ui-sref="profile.change-avatar" class="change-avatar-link">Изменить аватар</a>
                             <!--<input type="file" id="profile-ava" ng-show="profile.isMayEdit">-->
                         </label>
+
                     </div>
                     
                     <div class="user-body-right">
@@ -46,6 +47,15 @@
                         </div>
 
                         <div class="home-map"><img src="./i/map_home.jpg" alt="карта"/></div>
+
+                        <!--<div style="margin-bottom:10px;">
+                            <h4>Панель предварительного просмотра:</h4>
+                            <div style="overflow: hidden; width: 200px; height: 200px;">
+                                <img id="preview" src="../i/avatars/clint.jpg"/>
+                            </div>
+                        </div>
+
+                        <img src="../i/avatars/clint.jpg" alt="#" id="test"/>-->
                     </div>
                 </div>
             </div>
