--- a/vonline_be/war/partials/profile.changeAvatar.html
+++ b/vonline_be/war/partials/profile.changeAvatar.html
@@ -1,9 +1,22 @@
 
     <div id="dialog-message" class="hide">
-        <h2>Загрузите аватар</h2>
-        <button class="btn btn-sm btn-primary no-border load-avatar"><input type="file"/></button>
+        <div class="loadAvatar-area">
+            <h2>Загрузите аватар</h2>
+            <button class="btn btn-sm btn-primary no-border load-avatar"><input type="file"/></button>
+        </div>
 
-        <button class="btn btn-sm no-border btn-primary btn-save-avatar hidden" ng-click="changeAvatar.save()">Сохранить</button>
+        <div class="crop-area hidden">
+            <div style="margin-bottom:10px;">
+                <h4>Панель предварительного просмотра:</h4>
+                <div style="overflow: hidden; width: 200px; height: 200px;">
+                    <img id="preview" src="../i/avatars/clint.jpg"/>
+                </div>
+            </div>
+            <img src="#" alt="#" id="image-for-crop"/>
+
+            <button class="btn btn-sm no-border btn-primary btn-save-avatar" ng-click="changeAvatar.save()">Сохранить</button>
+            <button class="btn btn-sm no-border btn-primary btn-back" ng-click="changeAvatar.back()">Назад</button>
+        </div>
 
     </div>
 
