use new methods and structurs

--- a/vonline_be/war/partials/dialog-single.html
+++ b/vonline_be/war/partials/dialog-single.html
@@ -43,7 +43,7 @@
 
                         <li><input id="attachImage-000" type="file"/></li>
 
-                        <li><a href="#">Документ</a></li>
+                        <li><input id="attachDoc-000" type="file"/></li>
                     </ul>
                 </div>
 
