--- a/vonline_be/war/partials/write-message.html
+++ b/vonline_be/war/partials/write-message.html
@@ -27,7 +27,7 @@
             </button>
 
             <ul class="dropdown-menu dropdown-blue">
-                <li><a href="#">Документ</a></li>
+                <li><input id="attachDoc-0000" type="file"/></li>
                 <li><input id="attachImage-0000" type="file"/></li>
             </ul>
         </div>
