--- a/vonline_be/war/partials/talks.html
+++ b/vonline_be/war/partials/talks.html
@@ -24,6 +24,7 @@
                 </div>
 
                 <div class="attach-area" id="attach-area-00"></div>
+                <div class="attach-area attach-area-doc" id="attach-doc-area-00"></div>
 
                 <div class="message-input-bottom">
 
@@ -59,7 +60,7 @@
 
                             <li><input id="attachImage-00" type="file"/></li>
 
-                            <li><a href="#">Документ</a></li>
+                            <li><input id="attachDoc-00" type="file"/></li>
 
                         <li><a href="#" ng-click="base.showPoll($event,talks)" ng-show="talks.isPollAvailable">Опрос</a></li>
                         </ul>
