--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -914,3 +914,13 @@ transform()
   min-height 300px
   width auto !important
   height auto !important
+
+.jcrop-holder
+  background transparent !important
+  img
+    background-repeat no-repeat
+    background-position center center
+    background-size cover
+
+
+//img.jcrop-preview
