--- a/vonline_be/war/partials/profile.changeAvatar.html
+++ b/vonline_be/war/partials/profile.changeAvatar.html
@@ -9,7 +9,7 @@
             <div style="margin-bottom:10px;">
                 <h4>Панель предварительного просмотра:</h4>
                 <div style="overflow: hidden; width: 200px; height: 200px;">
-                    <img id="preview" src="../i/avatars/clint.jpg"/>
+                    <img id="preview" src="#"/>
                 </div>
             </div>
             <img src="#" alt="#" id="image-for-crop"/>
