--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -912,15 +912,21 @@ transform()
 #image-for-crop
   min-width 300px
   min-height 300px
-  width auto !important
-  height auto !important
+  //width auto !important
+  //height auto !important
+
+.preview-container
+  overflow hidden
+  width 150px
+  height 150px
+  margin 0 auto
 
 .jcrop-holder
   background transparent !important
   img
-    background-repeat no-repeat
-    background-position center center
-    background-size cover
+    /*background-repeat no-repeat*/
+    /*background-position center center*/
+    /*background-size cover*/
 
 
 //img.jcrop-preview
