--- a/vonline_be/war/css/style.css
+++ b/vonline_be/war/css/style.css
@@ -1061,14 +1061,13 @@ h1 {
 #image-for-crop {
   min-width: 300px;
   min-height: 300px;
-  width: auto !important;
-  height: auto !important;
+}
+.preview-container {
+  overflow: hidden;
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
 }
 .jcrop-holder {
   background: transparent !important;
-}
-.jcrop-holder img {
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
 }
