--- a/vonline_be/war/partials/profile.changeAvatar.html
+++ b/vonline_be/war/partials/profile.changeAvatar.html
@@ -8,7 +8,7 @@
         <div class="crop-area hidden">
             <div style="margin-bottom:10px;">
                 <h4>Панель предварительного просмотра:</h4>
-                <div style="overflow: hidden; width: 200px; height: 200px;">
+                <div class="preview-container">
                     <img id="preview" src="#"/>
                 </div>
             </div>
