--- a/vonline_be/war/partials/settings.html
+++ b/vonline_be/war/partials/settings.html
@@ -68,6 +68,7 @@
 
                             <button class="btn btn-sm no-border" ng-class="{'btn-cancel': !settings.canSave(1),'btn-primary' : settings.canSave(1)}"
                                     href="#" ng-disabled="!settings.canSave(1)" ng-click="settings.updatePasswordOrUserInfo()">Сохранить</button>
+                                <span class="error-info" ng-show="settings.isProfileError">{{ settings.profileError }}</span>
                             </form>
 
                         </div>
@@ -149,7 +150,7 @@
                             <form name="formContacts">
                             <div>
                                 <label for="settings-input-7">Email</label>
-                                <input type="email" id="settings-input-7" ng-model="settings.userContacts.email" required/>
+                                <input type="text" id="settings-input-7" ng-model="settings.userContacts.email" required/>
                             </div>
                             <div>
                                 <label for="settings-input-8">Телефон</label>
