--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -682,6 +682,9 @@ transform()
   &.short2
     width 48px
     height 48px
+  &.middle
+    width 70px
+    height 70px
 
 .create-topic-btn
   overflow auto
@@ -760,12 +763,26 @@ transform()
         img
           width 70px
       .private-message-author
-        margin-left 110px
+        margin-left 50px
+        .attached
+          padding-bottom 0
+        p
+          margin-bottom 0
         a
           &:hover
             text-decoration none
     .private-message-right
       margin-left 320px
+
+.private-messages
+  .private-message-single .private-message-left
+    line-height 65px
+    .private-message-author
+      display inline-block
+      vertical-align middle
+      line-height 18px
+      margin-left 10px
+      width 220px
 
 .dialog
   .private-message-single
