--- a/vonline_be/war/partials/dialogs.html
+++ b/vonline_be/war/partials/dialogs.html
@@ -1,6 +1,6 @@
 
 <section class="private-messages page"> <!-- ng-show="base.privateMessagesIsActive" -->
-    <a class="btn btn-primary no-border btn-sm pull-right" ui-sref="write-message">Написать сообщение</a>
+    <a class="btn btn-primary no-border btn-sm pull-right" ui-sref="neighbours">Написать сообщение</a>
     <form method="post" action="#" class="form-group has-info form-search-private">
 <!--
         <span class="block input-icon input-icon-right">
@@ -14,8 +14,7 @@
             <div class="private-message-single" ng-click="dialogs.goToSingleDialog(dialog.id)" ng-repeat="dialog in dialogs.dialogsList"> <!-- ui-sref="dialog-single( {dialogId : {{ dialog.id }} })" -->
                 <div class="private-message-left pull-left">
                     <div class="private-message-ava pull-left">
-                        <div class="avatar" style="background-image: url({{dialog.anotherUser.avatar}})"></div>
-                        <div>{{dialog.users.length}} участников</div>
+                        <div class="avatar middle" style="background-image: url({{dialog.anotherUser.avatar}})"></div>
                     </div>
                     <div class="private-message-author">
                         <div><a ui-sref="profile({ userId : {{ dialog.anotherUser.id }} })" ng-click="$event.stopPropagation()">{{dialog.anotherUser.firstName + " "+ dialog.anotherUser.lastName}}</a></div>
